fix: electron no scrollbars, closes #1336

--- a/packages/app-frontend/src/assets/style/index.styl
+++ b/packages/app-frontend/src/assets/style/index.styl
@@ -21,6 +21,7 @@ html, body
   font-family Roboto
   font-size 16px
   color #444
+  height 100%
 
 body
   overflow hidden
